# learn-genai

./: .gitignore  README.md
add-example/: GEMINI.md  README.md  biome.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.mts  vitest.setup.ts
add-example/.gemini/: settings.json
add-example/docs/: about_rdra.md  spec.md
add-example/rdra/: AFL_01_activity_flow.puml  BGY_01_business_context.puml  BGY_01_business_usecase.puml  BUC_01_traceability.md  BUC_01_traceability.puml  STA_01_state_model.puml  information_model.puml  system_context.puml  system_usecase.puml
add-example/tests/: example.spec.ts
bigquery-analyze-agent/: Dockerfile  GEMINI.md  README.md  architecture.puml  pyproject.toml  report.html
bigquery-analyze-agent/docs/: senario.md
booklog-pile-more-vibe/: package.json
booklog_more_vibe/docs/: MASTER_SPEC.md  oapi.yaml
booklog_pile/: api.yaml  booklog.db  go.mod  go.sum  main.go
booklog_pile/api/: router.go  server.go
booklog_pile_next/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  screen_diagram.puml
booklog_pile_next/app/: layout.tsx  page.tsx
booklog_pile_rust/: Cargo.toml
gemini-chat/: package.json  pnpm-lock.yaml
langchain/langgraph/helloworld/: agent_supervisor.ipynb  pyproject.toml
mcp-server-example/: .gitignore  .tbls.yml  students.db
mcp-server-example/with-go/: Makefile  go.mod
mcp-server-example/with-go2/: go.mod
mcp-server-example/with-python/: pyproject.toml
mcp-server-example/with-ts/: tsconfig.json
vertexai-search/: package.json  pnpm-lock.yaml
(+87 files in other folders)
